--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@ SLACK_BOT_TOKEN=your_token
 SLACK_APP_TOKEN=your_token
 
 SNYK_CHANNEL_ID=your_channel_id
+
+GEMINI_PRO_MODEL=gemini-3-pro-preview
+GEMINI_PRO_FALLBACK_MODEL=gemini-2.5-pro
+GEMINI_FLASH_MODEL=gemini-3-flash-preview
+GEMINI_FLASH_FALLBACK_MODEL=gemini-2.5-flash,gemini-2.5-flash-lite
